// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/markdownEditor should match snapshot 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview octo-placeholder"
      data-testid="preview-element"
    >
      <span />
    </div>
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with initial text 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview"
      data-testid="preview-element"
    >
      <div
        class="mocked-message-html"
      >
        some initial text already set
      </div>
    </div>
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  />
</div>
`;
